@@ -1,5 +1,15 @@
 2007-07-03  Vitaly Alexeev <tishka92@yahoo.com>
 
+	Fixed a some sound bugs that show one's worth
+	when sound driver is not installed
+	* gameswf/gameswf.h
+	* gameswf/gameswf_impl.cpp
+	* gameswf/gameswf_sound.cpp
+	* gameswf/gameswf_sound_handler_sdl.cpp
+	* gameswf/gameswf_sound_handler_sdl.h
+
+2007-07-03  Vitaly Alexeev <tishka92@yahoo.com>
+
 	A bit cleanup 
 	* gameswf/gameswf_types.cpp
 
